working.iptables.rules
# Generated by iptables-save v1.8.4 on Wed Nov 30 12:23:09 2022
*nat
:PREROUTING ACCEPT [14512:891379]
:INPUT ACCEPT [14512:891379]
:OUTPUT ACCEPT [22570:2475522]
:POSTROUTING ACCEPT [22570:2475522]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Wed Nov 30 12:23:09 2022
# Generated by iptables-save v1.8.4 on Wed Nov 30 12:23:09 2022
*filter
:INPUT ACCEPT [42:10784]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [26:25972]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -p tcp -m tcp --dport 34015
-A INPUT -p tcp -m tcp --dport 63064
-A INPUT -p tcp -m tcp --dport 4117
-A INPUT -p tcp -m tcp --dport 15322
-A INPUT -p tcp -m tcp --dport 4828
-A INPUT -p tcp -m tcp --dport 36264
-A INPUT -p tcp -m tcp --dport 1924
-A INPUT -p tcp -m tcp --dport 5318
-A INPUT -p tcp -m tcp --dport 46858
-A INPUT -p tcp -m tcp --dport 3688
-A INPUT -p tcp -m tcp --dport 55856
-A INPUT -p tcp -m tcp --dport 10121
-A INPUT -p tcp -m tcp --dport 52425
-A INPUT -p tcp -m tcp --dport 54661
-A INPUT -p tcp -m tcp --dport 33315
-A INPUT -p tcp -m tcp --dport 37715
-A INPUT -p tcp -m tcp --dport 31746
-A INPUT -p tcp -m tcp --dport 45933
-A INPUT -p tcp -m tcp --dport 36890
-A INPUT -p tcp -m tcp --dport 28882
-A INPUT -p tcp -m tcp --dport 14916
-A INPUT -p tcp -m tcp --dport 62550
-A INPUT -p tcp -m tcp --dport 52217
-A INPUT -p tcp -m tcp --dport 35142
-A INPUT -p tcp -m tcp --dport 64017
-A INPUT -p tcp -m tcp --dport 2045
-A INPUT -p tcp -m tcp --dport 21627
-A INPUT -p tcp -m tcp --dport 20141
-A INPUT -p tcp -m tcp --dport 43880
-A INPUT -p tcp -m tcp --dport 6364
-A INPUT -p tcp -m tcp --dport 63706
-A INPUT -p tcp -m tcp --dport 11642
-A INPUT -p tcp -m tcp --dport 12152
-A INPUT -p tcp -m tcp --dport 49026
-A INPUT -p tcp -m tcp --dport 2615
-A INPUT -p tcp -m tcp --dport 23281
-A INPUT -p tcp -m tcp --dport 3550
-A INPUT -p tcp -m tcp --dport 2816
-A INPUT -p tcp -m tcp --dport 24315
-A INPUT -p tcp -m tcp --dport 64737
-A INPUT -p tcp -m tcp --dport 50261
-A INPUT -p tcp -m tcp --dport 17606
-A INPUT -p tcp -m tcp --dport 56180
-A INPUT -p tcp -m tcp --dport 35230
-A INPUT -p tcp -m tcp --dport 19520
-A INPUT -p tcp -m tcp --dport 13563
-A INPUT -p tcp -m tcp --dport 9522
-A INPUT -p tcp -m tcp --dport 27809
-A INPUT -p tcp -m tcp --dport 25429
-A INPUT -p tcp -m tcp --dport 49092
-A INPUT -p tcp -m tcp --dport 34554
-A INPUT -p tcp -m tcp --dport 23965
-A INPUT -p tcp -m tcp --dport 56293
-A INPUT -p tcp -m tcp --dport 29701
-A INPUT -p tcp -m tcp --dport 54431
-A INPUT -p tcp -m tcp --dport 3638
-A INPUT -p tcp -m tcp --dport 11109
-A INPUT -p tcp -m tcp --dport 32522
-A INPUT -p tcp -m tcp --dport 45646
-A INPUT -p tcp -m tcp --dport 6162
-A INPUT -p tcp -m tcp --dport 3439
-A INPUT -p tcp -m tcp --dport 45566
-A INPUT -p tcp -m tcp --dport 28860
-A INPUT -p tcp -m tcp --dport 8775
-A INPUT -p tcp -m tcp --dport 33294
-A INPUT -p tcp -m tcp --dport 50152
-A INPUT -p tcp -m tcp --dport 14620
-A INPUT -p tcp -m tcp --dport 30112
-A INPUT -p tcp -m tcp --dport 63987
-A INPUT -p tcp -m tcp --dport 40375
-A INPUT -p tcp -m tcp --dport 3765
-A INPUT -p tcp -m tcp --dport 20806
-A INPUT -p tcp -m tcp --dport 3220
-A INPUT -p tcp -m tcp --dport 56524
-A INPUT -p tcp -m tcp --dport 4761
-A INPUT -p tcp -m tcp --dport 54217
-A INPUT -p tcp -m tcp --dport 57215
-A INPUT -p tcp -m tcp --dport 63263
-A INPUT -p tcp -m tcp --dport 19365
-A INPUT -p tcp -m tcp --dport 4898
-A INPUT -p tcp -m tcp --dport 32082
-A INPUT -p tcp -m tcp --dport 16589
-A INPUT -p tcp -m tcp --dport 11708
-A INPUT -p tcp -m tcp --dport 19147
-A INPUT -p tcp -m tcp --dport 54849
-A INPUT -p tcp -m tcp --dport 43884
-A INPUT -p tcp -m tcp --dport 18630
-A INPUT -p tcp -m tcp --dport 23963
-A INPUT -p tcp -m tcp --dport 40476
-A INPUT -p tcp -m tcp --dport 61140
-A INPUT -p tcp -m tcp --dport 15578
-A INPUT -p tcp -m tcp --dport 60167
-A INPUT -p tcp -m tcp --dport 57259
-A INPUT -p tcp -m tcp --dport 13305
-A INPUT -p tcp -m tcp --dport 36446
-A INPUT -p tcp -m tcp --dport 60775
-A INPUT -p tcp -m tcp --dport 23178
-A INPUT -p tcp -m tcp --dport 16624
-A INPUT -p tcp -m tcp --dport 18292
-A INPUT -p tcp -m tcp --dport 19751
-A INPUT -p tcp -m tcp --dport 11284
-A INPUT -p tcp -m tcp --dport 42932
-A INPUT -p tcp -m tcp --dport 27205
-A INPUT -p tcp -m tcp --dport 49627
-A INPUT -p tcp -m tcp --dport 43253
-A INPUT -p tcp -m tcp --dport 9847
-A INPUT -p tcp -m tcp --dport 28433
-A INPUT -p tcp -m tcp --dport 46093
-A INPUT -p tcp -m tcp --dport 33814
-A INPUT -p tcp -m tcp --dport 31518
-A INPUT -p tcp -m tcp --dport 8809
-A INPUT -p tcp -m tcp --dport 4376
-A INPUT -p tcp -m tcp --dport 4428
-A INPUT -p tcp -m tcp --dport 23468
-A INPUT -p tcp -m tcp --dport 8326
-A INPUT -p tcp -m tcp --dport 13313
-A INPUT -p tcp -m tcp --dport 58138
-A INPUT -p tcp -m tcp --dport 21153
-A INPUT -p tcp -m tcp --dport 36213
-A INPUT -p tcp -m tcp --dport 42620
-A INPUT -p tcp -m tcp --dport 41087
-A INPUT -p tcp -m tcp --dport 54739
-A INPUT -p tcp -m tcp --dport 44735
-A INPUT -p tcp -m tcp --dport 24211
-A INPUT -p tcp -m tcp --dport 64610
-A INPUT -p tcp -m tcp --dport 27699
-A INPUT -p tcp -m tcp --dport 40123
-A INPUT -p tcp -m tcp --dport 46685
-A INPUT -p tcp -m tcp --dport 13611
-A INPUT -p tcp -m tcp --dport 59499
-A INPUT -p tcp -m tcp --dport 10740
-A INPUT -p tcp -m tcp --dport 22624
-A INPUT -p tcp -m tcp --dport 28073
-A INPUT -p tcp -m tcp --dport 29320
-A INPUT -p tcp -m tcp --dport 4020
-A INPUT -p tcp -m tcp --dport 51300
-A INPUT -p tcp -m tcp --dport 47736
-A INPUT -p tcp -m tcp --dport 37526
-A INPUT -p tcp -m tcp --dport 58965
-A INPUT -p tcp -m tcp --dport 29038
-A INPUT -p tcp -m tcp --dport 31335
-A INPUT -p tcp -m tcp --dport 5831
-A INPUT -p tcp -m tcp --dport 35280
-A INPUT -p tcp -m tcp --dport 32318
-A INPUT -p tcp -m tcp --dport 54012
-A INPUT -p tcp -m tcp --dport 40599
-A INPUT -p tcp -m tcp --dport 6910
-A INPUT -p tcp -m tcp --dport 34624
-A INPUT -p tcp -m tcp --dport 56987
-A INPUT -p tcp -m tcp --dport 64479
-A INPUT -p tcp -m tcp --dport 29502
-A INPUT -p tcp -m tcp --dport 18884
-A INPUT -p tcp -m tcp --dport 36549
-A INPUT -p tcp -m tcp --dport 49797
-A INPUT -p tcp -m tcp --dport 21678
-A INPUT -p tcp -m tcp --dport 57278
-A INPUT -p tcp -m tcp --dport 56839
-A INPUT -p tcp -m tcp --dport 36279
-A INPUT -p tcp -m tcp --dport 2630
-A INPUT -p tcp -m tcp --dport 31879
-A INPUT -p tcp -m tcp --dport 11546
-A INPUT -p tcp -m tcp --dport 24965
-A INPUT -p tcp -m tcp --dport 34015
-A INPUT -p tcp -m tcp --dport 63064
-A INPUT -p tcp -m tcp --dport 4117
-A INPUT -p tcp -m tcp --dport 15322
-A INPUT -p tcp -m tcp --dport 4828
-A INPUT -p tcp -m tcp --dport 36264
-A INPUT -p tcp -m tcp --dport 1924
-A INPUT -p tcp -m tcp --dport 5318
-A INPUT -p tcp -m tcp --dport 46858
-A INPUT -p tcp -m tcp --dport 3688
-A INPUT -p tcp -m tcp --dport 55856
-A INPUT -p tcp -m tcp --dport 10121
-A INPUT -p tcp -m tcp --dport 52425
-A INPUT -p tcp -m tcp --dport 54661
-A INPUT -p tcp -m tcp --dport 33315
-A INPUT -p tcp -m tcp --dport 37715
-A INPUT -p tcp -m tcp --dport 31746
-A INPUT -p tcp -m tcp --dport 45933
-A INPUT -p tcp -m tcp --dport 36890
-A INPUT -p tcp -m tcp --dport 28882
-A INPUT -p tcp -m tcp --dport 14916
-A INPUT -p tcp -m tcp --dport 62550
-A INPUT -p tcp -m tcp --dport 52217
-A INPUT -p tcp -m tcp --dport 35142
-A INPUT -p tcp -m tcp --dport 64017
-A INPUT -p tcp -m tcp --dport 2045
-A INPUT -p tcp -m tcp --dport 21627
-A INPUT -p tcp -m tcp --dport 20141
-A INPUT -p tcp -m tcp --dport 43880
-A INPUT -p tcp -m tcp --dport 6364
-A INPUT -p tcp -m tcp --dport 63706
-A INPUT -p tcp -m tcp --dport 11642
-A INPUT -p tcp -m tcp --dport 12152
-A INPUT -p tcp -m tcp --dport 49026
-A INPUT -p tcp -m tcp --dport 2615
-A INPUT -p tcp -m tcp --dport 23281
-A INPUT -p tcp -m tcp --dport 3550
-A INPUT -p tcp -m tcp --dport 2816
-A INPUT -p tcp -m tcp --dport 24315
-A INPUT -p tcp -m tcp --dport 64737
-A INPUT -p tcp -m tcp --dport 50261
-A INPUT -p tcp -m tcp --dport 17606
-A INPUT -p tcp -m tcp --dport 56180
-A INPUT -p tcp -m tcp --dport 35230
-A INPUT -p tcp -m tcp --dport 19520
-A INPUT -p tcp -m tcp --dport 13563
-A INPUT -p tcp -m tcp --dport 9522
-A INPUT -p tcp -m tcp --dport 27809
-A INPUT -p tcp -m tcp --dport 25429
-A INPUT -p tcp -m tcp --dport 49092
-A INPUT -p tcp -m tcp --dport 34554
-A INPUT -p tcp -m tcp --dport 23965
-A INPUT -p tcp -m tcp --dport 56293
-A INPUT -p tcp -m tcp --dport 29701
-A INPUT -p tcp -m tcp --dport 54431
-A INPUT -p tcp -m tcp --dport 3638
-A INPUT -p tcp -m tcp --dport 11109
-A INPUT -p tcp -m tcp --dport 32522
-A INPUT -p tcp -m tcp --dport 45646
-A INPUT -p tcp -m tcp --dport 6162
-A INPUT -p tcp -m tcp --dport 3439
-A INPUT -p tcp -m tcp --dport 45566
-A INPUT -p tcp -m tcp --dport 28860
-A INPUT -p tcp -m tcp --dport 8775
-A INPUT -p tcp -m tcp --dport 33294
-A INPUT -p tcp -m tcp --dport 50152
-A INPUT -p tcp -m tcp --dport 14620
-A INPUT -p tcp -m tcp --dport 30112
-A INPUT -p tcp -m tcp --dport 63987
-A INPUT -p tcp -m tcp --dport 40375
-A INPUT -p tcp -m tcp --dport 3765
-A INPUT -p tcp -m tcp --dport 20806
-A INPUT -p tcp -m tcp --dport 3220
-A INPUT -p tcp -m tcp --dport 56524
-A INPUT -p tcp -m tcp --dport 4761
-A INPUT -p tcp -m tcp --dport 54217
-A INPUT -p tcp -m tcp --dport 57215
-A INPUT -p tcp -m tcp --dport 63263
-A INPUT -p tcp -m tcp --dport 19365
-A INPUT -p tcp -m tcp --dport 4898
-A INPUT -p tcp -m tcp --dport 32082
-A INPUT -p tcp -m tcp --dport 16589
-A INPUT -p tcp -m tcp --dport 11708
-A INPUT -p tcp -m tcp --dport 19147
-A INPUT -p tcp -m tcp --dport 54849
-A INPUT -p tcp -m tcp --dport 43884
-A INPUT -p tcp -m tcp --dport 18630
-A INPUT -p tcp -m tcp --dport 23963
-A INPUT -p tcp -m tcp --dport 40476
-A INPUT -p tcp -m tcp --dport 61140
-A INPUT -p tcp -m tcp --dport 15578
-A INPUT -p tcp -m tcp --dport 60167
-A INPUT -p tcp -m tcp --dport 57259
-A INPUT -p tcp -m tcp --dport 13305
-A INPUT -p tcp -m tcp --dport 36446
-A INPUT -p tcp -m tcp --dport 60775
-A INPUT -p tcp -m tcp --dport 23178
-A INPUT -p tcp -m tcp --dport 16624
-A INPUT -p tcp -m tcp --dport 18292
-A INPUT -p tcp -m tcp --dport 19751
-A INPUT -p tcp -m tcp --dport 11284
-A INPUT -p tcp -m tcp --dport 42932
-A INPUT -p tcp -m tcp --dport 27205
-A INPUT -p tcp -m tcp --dport 49627
-A INPUT -p tcp -m tcp --dport 43253
-A INPUT -p tcp -m tcp --dport 9847
-A INPUT -p tcp -m tcp --dport 28433
-A INPUT -p tcp -m tcp --dport 46093
-A INPUT -p tcp -m tcp --dport 33814
-A INPUT -p tcp -m tcp --dport 31518
-A INPUT -p tcp -m tcp --dport 8809
-A INPUT -p tcp -m tcp --dport 4376
-A INPUT -p tcp -m tcp --dport 4428
-A INPUT -p tcp -m tcp --dport 23468
-A INPUT -p tcp -m tcp --dport 8326
-A INPUT -p tcp -m tcp --dport 13313
-A INPUT -p tcp -m tcp --dport 58138
-A INPUT -p tcp -m tcp --dport 21153
-A INPUT -p tcp -m tcp --dport 36213
-A INPUT -p tcp -m tcp --dport 42620
-A INPUT -p tcp -m tcp --dport 41087
-A INPUT -p tcp -m tcp --dport 54739
-A INPUT -p tcp -m tcp --dport 44735
-A INPUT -p tcp -m tcp --dport 24211
-A INPUT -p tcp -m tcp --dport 64610
-A INPUT -p tcp -m tcp --dport 27699
-A INPUT -p tcp -m tcp --dport 40123
-A INPUT -p tcp -m tcp --dport 46685
-A INPUT -p tcp -m tcp --dport 13611
-A INPUT -p tcp -m tcp --dport 59499
-A INPUT -p tcp -m tcp --dport 10740
-A INPUT -p tcp -m tcp --dport 22624
-A INPUT -p tcp -m tcp --dport 28073
-A INPUT -p tcp -m tcp --dport 29320
-A INPUT -p tcp -m tcp --dport 4020
-A INPUT -p tcp -m tcp --dport 51300
-A INPUT -p tcp -m tcp --dport 47736
-A INPUT -p tcp -m tcp --dport 37526
-A INPUT -p tcp -m tcp --dport 58965
-A INPUT -p tcp -m tcp --dport 29038
-A INPUT -p tcp -m tcp --dport 31335
-A INPUT -p tcp -m tcp --dport 5831
-A INPUT -p tcp -m tcp --dport 35280
-A INPUT -p tcp -m tcp --dport 32318
-A INPUT -p tcp -m tcp --dport 54012
-A INPUT -p tcp -m tcp --dport 40599
-A INPUT -p tcp -m tcp --dport 6910
-A INPUT -p tcp -m tcp --dport 34624
-A INPUT -p tcp -m tcp --dport 56987
-A INPUT -p tcp -m tcp --dport 64479
-A INPUT -p tcp -m tcp --dport 29502
-A INPUT -p tcp -m tcp --dport 18884
-A INPUT -p tcp -m tcp --dport 36549
-A INPUT -p tcp -m tcp --dport 49797
-A INPUT -p tcp -m tcp --dport 21678
-A INPUT -p tcp -m tcp --dport 57278
-A INPUT -p tcp -m tcp --dport 56839
-A INPUT -p tcp -m tcp --dport 36279
-A INPUT -p tcp -m tcp --dport 2630
-A INPUT -p tcp -m tcp --dport 31879
-A INPUT -p tcp -m tcp --dport 11546
-A INPUT -p tcp -m tcp --dport 24965
-A INPUT -p tcp -m tcp --dport 17793
-A INPUT -p tcp -m tcp --dport 54548
-A INPUT -p tcp -m tcp --dport 65170
-A INPUT -p tcp -m tcp --dport 25614
-A INPUT -p tcp -m tcp --dport 32100
-A INPUT -p tcp -m tcp --dport 26688
-A INPUT -p tcp -m tcp --dport 39310
-A INPUT -p tcp -m tcp --dport 19129
-A INPUT -p tcp -m tcp --dport 40921
-A INPUT -p tcp -m tcp --dport 62121
-A INPUT -p tcp -m tcp --dport 34719
-A INPUT -p tcp -m tcp --dport 13376
-A INPUT -p tcp -m tcp --dport 2180
-A INPUT -p tcp -m tcp --dport 38406
-A INPUT -p tcp -m tcp --dport 45961
-A INPUT -p tcp -m tcp --dport 13713
-A INPUT -p tcp -m tcp --dport 12385
-A INPUT -p tcp -m tcp --dport 4054
-A INPUT -p tcp -m tcp --dport 12552
-A INPUT -p tcp -m tcp --dport 14620
-A INPUT -p tcp -m tcp --dport 62846
-A INPUT -p tcp -m tcp --dport 10323
-A INPUT -p tcp -m tcp --dport 27227
-A INPUT -p tcp -m tcp --dport 2646
-A INPUT -p tcp -m tcp --dport 64142
-A INPUT -p tcp -m tcp --dport 44486
-A INPUT -p tcp -m tcp --dport 49633
-A INPUT -p tcp -m tcp --dport 12143
-A INPUT -p tcp -m tcp --dport 4023
-A INPUT -p tcp -m tcp --dport 44948
-A INPUT -p tcp -m tcp --dport 13953
-A INPUT -p tcp -m tcp --dport 23081
-A INPUT -p tcp -m tcp --dport 47576
-A INPUT -p tcp -m tcp --dport 61153
-A INPUT -p tcp -m tcp --dport 17184
-A INPUT -p tcp -m tcp --dport 43816
-A INPUT -p tcp -m tcp --dport 51244
-A INPUT -p tcp -m tcp --dport 14651
-A INPUT -p tcp -m tcp --dport 16864
-A INPUT -p tcp -m tcp --dport 5767
-A INPUT -p tcp -m tcp --dport 43818
-A INPUT -p tcp -m tcp --dport 9633
-A INPUT -p tcp -m tcp --dport 51787
-A INPUT -p tcp -m tcp --dport 48804
-A INPUT -p tcp -m tcp --dport 42403
-A INPUT -p tcp -m tcp --dport 4615
-A INPUT -p tcp -m tcp --dport 8000
-A INPUT -p tcp -m tcp --dport 36469
-A INPUT -p tcp -m tcp --dport 18683
-A INPUT -p tcp -m tcp --dport 65178
-A INPUT -p tcp -m tcp --dport 59758
-A INPUT -p tcp -m tcp --dport 1648
-A INPUT -p tcp -m tcp --dport 5970
-A INPUT -p tcp -m tcp --dport 3317
-A INPUT -p tcp -m tcp --dport 6595
-A INPUT -p tcp -m tcp --dport 53969
-A INPUT -p tcp -m tcp --dport 35787
-A INPUT -p tcp -m tcp --dport 47174
-A INPUT -p tcp -m tcp --dport 39880
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 34015
-A OUTPUT -p tcp -m tcp --sport 63064
-A OUTPUT -p tcp -m tcp --sport 4117
-A OUTPUT -p tcp -m tcp --sport 15322
-A OUTPUT -p tcp -m tcp --sport 4828
-A OUTPUT -p tcp -m tcp --sport 36264
-A OUTPUT -p tcp -m tcp --sport 1924
-A OUTPUT -p tcp -m tcp --sport 5318
-A OUTPUT -p tcp -m tcp --sport 46858
-A OUTPUT -p tcp -m tcp --sport 3688
-A OUTPUT -p tcp -m tcp --sport 55856
-A OUTPUT -p tcp -m tcp --sport 10121
-A OUTPUT -p tcp -m tcp --sport 52425
-A OUTPUT -p tcp -m tcp --sport 54661
-A OUTPUT -p tcp -m tcp --sport 33315
-A OUTPUT -p tcp -m tcp --sport 37715
-A OUTPUT -p tcp -m tcp --sport 31746
-A OUTPUT -p tcp -m tcp --sport 45933
-A OUTPUT -p tcp -m tcp --sport 36890
-A OUTPUT -p tcp -m tcp --sport 28882
-A OUTPUT -p tcp -m tcp --sport 14916
-A OUTPUT -p tcp -m tcp --sport 62550
-A OUTPUT -p tcp -m tcp --sport 52217
-A OUTPUT -p tcp -m tcp --sport 35142
-A OUTPUT -p tcp -m tcp --sport 64017
-A OUTPUT -p tcp -m tcp --sport 2045
-A OUTPUT -p tcp -m tcp --sport 21627
-A OUTPUT -p tcp -m tcp --sport 20141
-A OUTPUT -p tcp -m tcp --sport 43880
-A OUTPUT -p tcp -m tcp --sport 6364
-A OUTPUT -p tcp -m tcp --sport 63706
-A OUTPUT -p tcp -m tcp --sport 11642
-A OUTPUT -p tcp -m tcp --sport 12152
-A OUTPUT -p tcp -m tcp --sport 49026
-A OUTPUT -p tcp -m tcp --sport 2615
-A OUTPUT -p tcp -m tcp --sport 23281
-A OUTPUT -p tcp -m tcp --sport 3550
-A OUTPUT -p tcp -m tcp --sport 2816
-A OUTPUT -p tcp -m tcp --sport 24315
-A OUTPUT -p tcp -m tcp --sport 64737
-A OUTPUT -p tcp -m tcp --sport 50261
-A OUTPUT -p tcp -m tcp --sport 17606
-A OUTPUT -p tcp -m tcp --sport 56180
-A OUTPUT -p tcp -m tcp --sport 35230
-A OUTPUT -p tcp -m tcp --sport 19520
-A OUTPUT -p tcp -m tcp --sport 13563
-A OUTPUT -p tcp -m tcp --sport 9522
-A OUTPUT -p tcp -m tcp --sport 27809
-A OUTPUT -p tcp -m tcp --sport 25429
-A OUTPUT -p tcp -m tcp --sport 49092
-A OUTPUT -p tcp -m tcp --sport 34554
-A OUTPUT -p tcp -m tcp --sport 23965
-A OUTPUT -p tcp -m tcp --sport 56293
-A OUTPUT -p tcp -m tcp --sport 29701
-A OUTPUT -p tcp -m tcp --sport 54431
-A OUTPUT -p tcp -m tcp --sport 3638
-A OUTPUT -p tcp -m tcp --sport 11109
-A OUTPUT -p tcp -m tcp --sport 32522
-A OUTPUT -p tcp -m tcp --sport 45646
-A OUTPUT -p tcp -m tcp --sport 6162
-A OUTPUT -p tcp -m tcp --sport 3439
-A OUTPUT -p tcp -m tcp --sport 45566
-A OUTPUT -p tcp -m tcp --sport 28860
-A OUTPUT -p tcp -m tcp --sport 8775
-A OUTPUT -p tcp -m tcp --sport 33294
-A OUTPUT -p tcp -m tcp --sport 50152
-A OUTPUT -p tcp -m tcp --sport 14620
-A OUTPUT -p tcp -m tcp --sport 30112
-A OUTPUT -p tcp -m tcp --sport 63987
-A OUTPUT -p tcp -m tcp --sport 40375
-A OUTPUT -p tcp -m tcp --sport 3765
-A OUTPUT -p tcp -m tcp --sport 20806
-A OUTPUT -p tcp -m tcp --sport 3220
-A OUTPUT -p tcp -m tcp --sport 56524
-A OUTPUT -p tcp -m tcp --sport 4761
-A OUTPUT -p tcp -m tcp --sport 54217
-A OUTPUT -p tcp -m tcp --sport 57215
-A OUTPUT -p tcp -m tcp --sport 63263
-A OUTPUT -p tcp -m tcp --sport 19365
-A OUTPUT -p tcp -m tcp --sport 4898
-A OUTPUT -p tcp -m tcp --sport 32082
-A OUTPUT -p tcp -m tcp --sport 16589
-A OUTPUT -p tcp -m tcp --sport 11708
-A OUTPUT -p tcp -m tcp --sport 19147
-A OUTPUT -p tcp -m tcp --sport 54849
-A OUTPUT -p tcp -m tcp --sport 43884
-A OUTPUT -p tcp -m tcp --sport 18630
-A OUTPUT -p tcp -m tcp --sport 23963
-A OUTPUT -p tcp -m tcp --sport 40476
-A OUTPUT -p tcp -m tcp --sport 61140
-A OUTPUT -p tcp -m tcp --sport 15578
-A OUTPUT -p tcp -m tcp --sport 60167
-A OUTPUT -p tcp -m tcp --sport 57259
-A OUTPUT -p tcp -m tcp --sport 13305
-A OUTPUT -p tcp -m tcp --sport 36446
-A OUTPUT -p tcp -m tcp --sport 60775
-A OUTPUT -p tcp -m tcp --sport 23178
-A OUTPUT -p tcp -m tcp --sport 16624
-A OUTPUT -p tcp -m tcp --sport 18292
-A OUTPUT -p tcp -m tcp --sport 19751
-A OUTPUT -p tcp -m tcp --sport 11284
-A OUTPUT -p tcp -m tcp --sport 42932
-A OUTPUT -p tcp -m tcp --sport 27205
-A OUTPUT -p tcp -m tcp --sport 49627
-A OUTPUT -p tcp -m tcp --sport 43253
-A OUTPUT -p tcp -m tcp --sport 9847
-A OUTPUT -p tcp -m tcp --sport 28433
-A OUTPUT -p tcp -m tcp --sport 46093
-A OUTPUT -p tcp -m tcp --sport 33814
-A OUTPUT -p tcp -m tcp --sport 31518
-A OUTPUT -p tcp -m tcp --sport 8809
-A OUTPUT -p tcp -m tcp --sport 4376
-A OUTPUT -p tcp -m tcp --sport 4428
-A OUTPUT -p tcp -m tcp --sport 23468
-A OUTPUT -p tcp -m tcp --sport 8326
-A OUTPUT -p tcp -m tcp --sport 13313
-A OUTPUT -p tcp -m tcp --sport 58138
-A OUTPUT -p tcp -m tcp --sport 21153
-A OUTPUT -p tcp -m tcp --sport 36213
-A OUTPUT -p tcp -m tcp --sport 42620
-A OUTPUT -p tcp -m tcp --sport 41087
-A OUTPUT -p tcp -m tcp --sport 54739
-A OUTPUT -p tcp -m tcp --sport 44735
-A OUTPUT -p tcp -m tcp --sport 24211
-A OUTPUT -p tcp -m tcp --sport 64610
-A OUTPUT -p tcp -m tcp --sport 27699
-A OUTPUT -p tcp -m tcp --sport 40123
-A OUTPUT -p tcp -m tcp --sport 46685
-A OUTPUT -p tcp -m tcp --sport 13611
-A OUTPUT -p tcp -m tcp --sport 59499
-A OUTPUT -p tcp -m tcp --sport 10740
-A OUTPUT -p tcp -m tcp --sport 22624
-A OUTPUT -p tcp -m tcp --sport 28073
-A OUTPUT -p tcp -m tcp --sport 29320
-A OUTPUT -p tcp -m tcp --sport 4020
-A OUTPUT -p tcp -m tcp --sport 51300
-A OUTPUT -p tcp -m tcp --sport 47736
-A OUTPUT -p tcp -m tcp --sport 37526
-A OUTPUT -p tcp -m tcp --sport 58965
-A OUTPUT -p tcp -m tcp --sport 29038
-A OUTPUT -p tcp -m tcp --sport 31335
-A OUTPUT -p tcp -m tcp --sport 5831
-A OUTPUT -p tcp -m tcp --sport 35280
-A OUTPUT -p tcp -m tcp --sport 32318
-A OUTPUT -p tcp -m tcp --sport 54012
-A OUTPUT -p tcp -m tcp --sport 40599
-A OUTPUT -p tcp -m tcp --sport 6910
-A OUTPUT -p tcp -m tcp --sport 34624
-A OUTPUT -p tcp -m tcp --sport 56987
-A OUTPUT -p tcp -m tcp --sport 64479
-A OUTPUT -p tcp -m tcp --sport 29502
-A OUTPUT -p tcp -m tcp --sport 18884
-A OUTPUT -p tcp -m tcp --sport 36549
-A OUTPUT -p tcp -m tcp --sport 49797
-A OUTPUT -p tcp -m tcp --sport 21678
-A OUTPUT -p tcp -m tcp --sport 57278
-A OUTPUT -p tcp -m tcp --sport 56839
-A OUTPUT -p tcp -m tcp --sport 36279
-A OUTPUT -p tcp -m tcp --sport 2630
-A OUTPUT -p tcp -m tcp --sport 31879
-A OUTPUT -p tcp -m tcp --sport 11546
-A OUTPUT -p tcp -m tcp --sport 24965
-A OUTPUT -p tcp -m tcp --sport 34015
-A OUTPUT -p tcp -m tcp --sport 63064
-A OUTPUT -p tcp -m tcp --sport 4117
-A OUTPUT -p tcp -m tcp --sport 15322
-A OUTPUT -p tcp -m tcp --sport 4828
-A OUTPUT -p tcp -m tcp --sport 36264
-A OUTPUT -p tcp -m tcp --sport 1924
-A OUTPUT -p tcp -m tcp --sport 5318
-A OUTPUT -p tcp -m tcp --sport 46858
-A OUTPUT -p tcp -m tcp --sport 3688
-A OUTPUT -p tcp -m tcp --sport 55856
-A OUTPUT -p tcp -m tcp --sport 10121
-A OUTPUT -p tcp -m tcp --sport 52425
-A OUTPUT -p tcp -m tcp --sport 54661
-A OUTPUT -p tcp -m tcp --sport 33315
-A OUTPUT -p tcp -m tcp --sport 37715
-A OUTPUT -p tcp -m tcp --sport 31746
-A OUTPUT -p tcp -m tcp --sport 45933
-A OUTPUT -p tcp -m tcp --sport 36890
-A OUTPUT -p tcp -m tcp --sport 28882
-A OUTPUT -p tcp -m tcp --sport 14916
-A OUTPUT -p tcp -m tcp --sport 62550
-A OUTPUT -p tcp -m tcp --sport 52217
-A OUTPUT -p tcp -m tcp --sport 35142
-A OUTPUT -p tcp -m tcp --sport 64017
-A OUTPUT -p tcp -m tcp --sport 2045
-A OUTPUT -p tcp -m tcp --sport 21627
-A OUTPUT -p tcp -m tcp --sport 20141
-A OUTPUT -p tcp -m tcp --sport 43880
-A OUTPUT -p tcp -m tcp --sport 6364
-A OUTPUT -p tcp -m tcp --sport 63706
-A OUTPUT -p tcp -m tcp --sport 11642
-A OUTPUT -p tcp -m tcp --sport 12152
-A OUTPUT -p tcp -m tcp --sport 49026
-A OUTPUT -p tcp -m tcp --sport 2615
-A OUTPUT -p tcp -m tcp --sport 23281
-A OUTPUT -p tcp -m tcp --sport 3550
-A OUTPUT -p tcp -m tcp --sport 2816
-A OUTPUT -p tcp -m tcp --sport 24315
-A OUTPUT -p tcp -m tcp --sport 64737
-A OUTPUT -p tcp -m tcp --sport 50261
-A OUTPUT -p tcp -m tcp --sport 17606
-A OUTPUT -p tcp -m tcp --sport 56180
-A OUTPUT -p tcp -m tcp --sport 35230
-A OUTPUT -p tcp -m tcp --sport 19520
-A OUTPUT -p tcp -m tcp --sport 13563
-A OUTPUT -p tcp -m tcp --sport 9522
-A OUTPUT -p tcp -m tcp --sport 27809
-A OUTPUT -p tcp -m tcp --sport 25429
-A OUTPUT -p tcp -m tcp --sport 49092
-A OUTPUT -p tcp -m tcp --sport 34554
-A OUTPUT -p tcp -m tcp --sport 23965
-A OUTPUT -p tcp -m tcp --sport 56293
-A OUTPUT -p tcp -m tcp --sport 29701
-A OUTPUT -p tcp -m tcp --sport 54431
-A OUTPUT -p tcp -m tcp --sport 3638
-A OUTPUT -p tcp -m tcp --sport 11109
-A OUTPUT -p tcp -m tcp --sport 32522
-A OUTPUT -p tcp -m tcp --sport 45646
-A OUTPUT -p tcp -m tcp --sport 6162
-A OUTPUT -p tcp -m tcp --sport 3439
-A OUTPUT -p tcp -m tcp --sport 45566
-A OUTPUT -p tcp -m tcp --sport 28860
-A OUTPUT -p tcp -m tcp --sport 8775
-A OUTPUT -p tcp -m tcp --sport 33294
-A OUTPUT -p tcp -m tcp --sport 50152
-A OUTPUT -p tcp -m tcp --sport 14620
-A OUTPUT -p tcp -m tcp --sport 30112
-A OUTPUT -p tcp -m tcp --sport 63987
-A OUTPUT -p tcp -m tcp --sport 40375
-A OUTPUT -p tcp -m tcp --sport 3765
-A OUTPUT -p tcp -m tcp --sport 20806
-A OUTPUT -p tcp -m tcp --sport 3220
-A OUTPUT -p tcp -m tcp --sport 56524
-A OUTPUT -p tcp -m tcp --sport 4761
-A OUTPUT -p tcp -m tcp --sport 54217
-A OUTPUT -p tcp -m tcp --sport 57215
-A OUTPUT -p tcp -m tcp --sport 63263
-A OUTPUT -p tcp -m tcp --sport 19365
-A OUTPUT -p tcp -m tcp --sport 4898
-A OUTPUT -p tcp -m tcp --sport 32082
-A OUTPUT -p tcp -m tcp --sport 16589
-A OUTPUT -p tcp -m tcp --sport 11708
-A OUTPUT -p tcp -m tcp --sport 19147
-A OUTPUT -p tcp -m tcp --sport 54849
-A OUTPUT -p tcp -m tcp --sport 43884
-A OUTPUT -p tcp -m tcp --sport 18630
-A OUTPUT -p tcp -m tcp --sport 23963
-A OUTPUT -p tcp -m tcp --sport 40476
-A OUTPUT -p tcp -m tcp --sport 61140
-A OUTPUT -p tcp -m tcp --sport 15578
-A OUTPUT -p tcp -m tcp --sport 60167
-A OUTPUT -p tcp -m tcp --sport 57259
-A OUTPUT -p tcp -m tcp --sport 13305
-A OUTPUT -p tcp -m tcp --sport 36446
-A OUTPUT -p tcp -m tcp --sport 60775
-A OUTPUT -p tcp -m tcp --sport 23178
-A OUTPUT -p tcp -m tcp --sport 16624
-A OUTPUT -p tcp -m tcp --sport 18292
-A OUTPUT -p tcp -m tcp --sport 19751
-A OUTPUT -p tcp -m tcp --sport 11284
-A OUTPUT -p tcp -m tcp --sport 42932
-A OUTPUT -p tcp -m tcp --sport 27205
-A OUTPUT -p tcp -m tcp --sport 49627
-A OUTPUT -p tcp -m tcp --sport 43253
-A OUTPUT -p tcp -m tcp --sport 9847
-A OUTPUT -p tcp -m tcp --sport 28433
-A OUTPUT -p tcp -m tcp --sport 46093
-A OUTPUT -p tcp -m tcp --sport 33814
-A OUTPUT -p tcp -m tcp --sport 31518
-A OUTPUT -p tcp -m tcp --sport 8809
-A OUTPUT -p tcp -m tcp --sport 4376
-A OUTPUT -p tcp -m tcp --sport 4428
-A OUTPUT -p tcp -m tcp --sport 23468
-A OUTPUT -p tcp -m tcp --sport 8326
-A OUTPUT -p tcp -m tcp --sport 13313
-A OUTPUT -p tcp -m tcp --sport 58138
-A OUTPUT -p tcp -m tcp --sport 21153
-A OUTPUT -p tcp -m tcp --sport 36213
-A OUTPUT -p tcp -m tcp --sport 42620
-A OUTPUT -p tcp -m tcp --sport 41087
-A OUTPUT -p tcp -m tcp --sport 54739
-A OUTPUT -p tcp -m tcp --sport 44735
-A OUTPUT -p tcp -m tcp --sport 24211
-A OUTPUT -p tcp -m tcp --sport 64610
-A OUTPUT -p tcp -m tcp --sport 27699
-A OUTPUT -p tcp -m tcp --sport 40123
-A OUTPUT -p tcp -m tcp --sport 46685
-A OUTPUT -p tcp -m tcp --sport 13611
-A OUTPUT -p tcp -m tcp --sport 59499
-A OUTPUT -p tcp -m tcp --sport 10740
-A OUTPUT -p tcp -m tcp --sport 22624
-A OUTPUT -p tcp -m tcp --sport 28073
-A OUTPUT -p tcp -m tcp --sport 29320
-A OUTPUT -p tcp -m tcp --sport 4020
-A OUTPUT -p tcp -m tcp --sport 51300
-A OUTPUT -p tcp -m tcp --sport 47736
-A OUTPUT -p tcp -m tcp --sport 37526
-A OUTPUT -p tcp -m tcp --sport 58965
-A OUTPUT -p tcp -m tcp --sport 29038
-A OUTPUT -p tcp -m tcp --sport 31335
-A OUTPUT -p tcp -m tcp --sport 5831
-A OUTPUT -p tcp -m tcp --sport 35280
-A OUTPUT -p tcp -m tcp --sport 32318
-A OUTPUT -p tcp -m tcp --sport 54012
-A OUTPUT -p tcp -m tcp --sport 40599
-A OUTPUT -p tcp -m tcp --sport 6910
-A OUTPUT -p tcp -m tcp --sport 34624
-A OUTPUT -p tcp -m tcp --sport 56987
-A OUTPUT -p tcp -m tcp --sport 64479
-A OUTPUT -p tcp -m tcp --sport 29502
-A OUTPUT -p tcp -m tcp --sport 18884
-A OUTPUT -p tcp -m tcp --sport 36549
-A OUTPUT -p tcp -m tcp --sport 49797
-A OUTPUT -p tcp -m tcp --sport 21678
-A OUTPUT -p tcp -m tcp --sport 57278
-A OUTPUT -p tcp -m tcp --sport 56839
-A OUTPUT -p tcp -m tcp --sport 36279
-A OUTPUT -p tcp -m tcp --sport 2630
-A OUTPUT -p tcp -m tcp --sport 31879
-A OUTPUT -p tcp -m tcp --sport 11546
-A OUTPUT -p tcp -m tcp --sport 24965
-A OUTPUT -p tcp -m tcp --sport 17793
-A OUTPUT -p tcp -m tcp --sport 54548
-A OUTPUT -p tcp -m tcp --sport 65170
-A OUTPUT -p tcp -m tcp --sport 25614
-A OUTPUT -p tcp -m tcp --sport 32100
-A OUTPUT -p tcp -m tcp --sport 26688
-A OUTPUT -p tcp -m tcp --sport 39310
-A OUTPUT -p tcp -m tcp --sport 19129
-A OUTPUT -p tcp -m tcp --sport 40921
-A OUTPUT -p tcp -m tcp --sport 62121
-A OUTPUT -p tcp -m tcp --sport 34719
-A OUTPUT -p tcp -m tcp --sport 13376
-A OUTPUT -p tcp -m tcp --sport 2180
-A OUTPUT -p tcp -m tcp --sport 38406
-A OUTPUT -p tcp -m tcp --sport 45961
-A OUTPUT -p tcp -m tcp --sport 13713
-A OUTPUT -p tcp -m tcp --sport 12385
-A OUTPUT -p tcp -m tcp --sport 4054
-A OUTPUT -p tcp -m tcp --sport 12552
-A OUTPUT -p tcp -m tcp --sport 14620
-A OUTPUT -p tcp -m tcp --sport 62846
-A OUTPUT -p tcp -m tcp --sport 10323
-A OUTPUT -p tcp -m tcp --sport 27227
-A OUTPUT -p tcp -m tcp --sport 2646
-A OUTPUT -p tcp -m tcp --sport 64142
-A OUTPUT -p tcp -m tcp --sport 44486
-A OUTPUT -p tcp -m tcp --sport 49633
-A OUTPUT -p tcp -m tcp --sport 12143
-A OUTPUT -p tcp -m tcp --sport 4023
-A OUTPUT -p tcp -m tcp --sport 44948
-A OUTPUT -p tcp -m tcp --sport 13953
-A OUTPUT -p tcp -m tcp --sport 23081
-A OUTPUT -p tcp -m tcp --sport 47576
-A OUTPUT -p tcp -m tcp --sport 61153
-A OUTPUT -p tcp -m tcp --sport 17184
-A OUTPUT -p tcp -m tcp --sport 43816
-A OUTPUT -p tcp -m tcp --sport 51244
-A OUTPUT -p tcp -m tcp --sport 14651
-A OUTPUT -p tcp -m tcp --sport 16864
-A OUTPUT -p tcp -m tcp --sport 5767
-A OUTPUT -p tcp -m tcp --sport 43818
-A OUTPUT -p tcp -m tcp --sport 9633
-A OUTPUT -p tcp -m tcp --sport 51787
-A OUTPUT -p tcp -m tcp --sport 48804
-A OUTPUT -p tcp -m tcp --sport 42403
-A OUTPUT -p tcp -m tcp --sport 4615
-A OUTPUT -p tcp -m tcp --sport 8000
-A OUTPUT -p tcp -m tcp --sport 36469
-A OUTPUT -p tcp -m tcp --sport 18683
-A OUTPUT -p tcp -m tcp --sport 65178
-A OUTPUT -p tcp -m tcp --sport 59758
-A OUTPUT -p tcp -m tcp --sport 1648
-A OUTPUT -p tcp -m tcp --sport 5970
-A OUTPUT -p tcp -m tcp --sport 3317
-A OUTPUT -p tcp -m tcp --sport 6595
-A OUTPUT -p tcp -m tcp --sport 53969
-A OUTPUT -p tcp -m tcp --sport 35787
-A OUTPUT -p tcp -m tcp --sport 47174
-A OUTPUT -p tcp -m tcp --sport 39880
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Wed Nov 30 12:23:09 2022
